fix: improve kernel tuning